Created basic classes

--- a/Towernator.vcxproj.filters
+++ b/Towernator.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Towernator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameObjects.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="GameObjects.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
