--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ bld/
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
+*.idb
+*.exe
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
@@ -392,3 +394,5 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+/Towernator/x64/Debug/vc143.idb
+/x64/Debug/Towernator.exe
