started texture work

--- a/Towernator.vcxproj
+++ b/Towernator.vcxproj
@@ -175,6 +175,9 @@
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\Pictures\test_tile.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
