--- a/Towernator.vcxproj
+++ b/Towernator.vcxproj
@@ -157,8 +157,9 @@
   <ItemGroup>
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="GameObjects.cpp" />
+    <ClCompile Include="GifAnimator.cpp" />
     <ClCompile Include="HelperFunctions.cpp" />
-    <ClCompile Include="ImageManager.cpp" />
+    <ClCompile Include="ImageRenderer.cpp" />
     <ClCompile Include="imgui\imgui-SFML.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_draw.cpp" />
