Added exceptions and some unit tests
Had to rewrite some code so that it works with exceptions.

--- a/Towernator.vcxproj
+++ b/Towernator.vcxproj
@@ -166,7 +166,7 @@
     <ClCompile Include="imgui\imgui_tables.cpp" />
     <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="IODataManager.cpp" />
-    <ClCompile Include="Tests.cpp" />
+    <ClCompile Include="Exceptions.cpp" />
     <ClCompile Include="Tower.cpp" />
     <ClCompile Include="Towernator.cpp" />
   </ItemGroup>
