--- a/Towernator.vcxproj.filters
+++ b/Towernator.vcxproj.filters
@@ -48,7 +48,7 @@
     <ClCompile Include="IODataManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Tests.cpp">
+    <ClCompile Include="Exceptions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Tower.cpp">
