--- a/imgui.ini
+++ b/imgui.ini
@@ -6,3 +6,11 @@ Size=400,400
 Pos=962,0
 Size=265,131
 
+[Window][Menu]
+Pos=298,116
+Size=500,223
+
+[Window][Information]
+Pos=60,60
+Size=346,48
+
