--- a/.gitignore
+++ b/.gitignore
@@ -402,3 +402,4 @@ FodyWeavers.xsd
 /Towernator/
 /x64/Debug/Towernator.exe
 /x64/Release/Towernator.exe
+/Towernator/x64/Debug/Towernator.exe.recipe
