--- a/Towernator.vcxproj.filters
+++ b/Towernator.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="GifAnimator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Tests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameObjects.hpp">
